--- a/css/layout.css
+++ b/css/layout.css
@@ -11,13 +11,32 @@
     transform: rotate(360deg);
   }
 }
-.inner-wrap {
+.inner {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   position: relative;
   padding: 0 16px;
   box-sizing: border-box;
+}
+
+.anchor {
+  position: fixed;
+  top: 40px;
+  left: 16px;
+  font-size: 16px;
+  font-weight: 300;
+  color: #040404;
+  opacity: 0.7;
+  z-index: 2;
+  transform: rotate(90deg);
+}
+@media all and (max-width: 768px) {
+  .anchor {
+    top: 25px;
+    left: 16px;
+    transform: rotate(0);
+  }
 }
 
 header {
@@ -27,6 +46,11 @@ header {
   width: 100%;
   z-index: 1;
   background: rgba(255, 255, 255, 0.3);
+}
+@media all and (max-width: 768px) {
+  header {
+    display: none;
+  }
 }
 header nav {
   height: 80px;
@@ -76,6 +100,11 @@ header nav ul li.active a {
   top: 0;
   margin: 0;
   z-index: 1000;
+}
+@media all and (max-width: 768px) {
+  .mobile-gnb-wrap {
+    display: block;
+  }
 }
 .mobile-gnb-wrap .btn-menu {
   position: fixed;
@@ -162,81 +191,6 @@ header nav ul li.active a {
   right: 0;
 }
 
-.box {
-  width: 100%;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-  transform: translate3d(0, 0, 0);
-}
-.box:after {
-  content: "";
-  display: block;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, #ee88aa, rgba(221, 238, 255, 0) 80%, rgba(255, 255, 255, 0.5));
-  z-index: 11;
-  transform: translate3d(0, 0, 0);
-}
-.box .wave {
-  opacity: 0.4;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background: #455de0;
-  width: 460px;
-  height: 460px;
-  margin-left: -230px;
-  margin-top: -230px;
-  transform-origin: 50% 48%;
-  border-radius: 43%;
-  animation: drift 3000ms infinite linear;
-}
-.box .wave.two {
-  animation: drift 7000ms infinite linear;
-  opacity: 0.1;
-  background: #ff79ed;
-}
-.box .wave.three {
-  animation: drift 5000ms infinite linear;
-  background: #007bff;
-}
-
-h1 {
-  position: fixed;
-  top: 40px;
-  left: 16px;
-  font-size: 16px;
-  font-weight: 300;
-  color: #040404;
-  opacity: 0.7;
-  z-index: 2;
-  transform: rotate(90deg);
-}
-
-.title {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  text-align: center;
-  color: #fff;
-}
-.title h2 {
-  font-size: 55px;
-  line-height: 60px;
-  font-family: "Playfair Display", serif;
-}
-.title span {
-  display: block;
-  font-size: 16px;
-  font-family: "Roboto", "Noto Sans KR", sans-serif;
-  font-weight: 300;
-}
-
 .btn-line {
   position: relative;
   display: inline-block;
@@ -249,6 +203,13 @@ h1 {
   transition: 500ms ease all;
   color: #040404;
   font-weight: 500;
+}
+@media all and (max-width: 768px) {
+  .btn-line {
+    min-width: 120px;
+    padding: 12px 0;
+    font-size: 14px;
+  }
 }
 .btn-line:hover {
   background: transparent;
@@ -287,30 +248,4 @@ footer .copyright {
   font-size: 16px;
   color: #ddd;
   opacity: 0.7;
-}
-
-@media all and (max-width: 768px) {
-  h1 {
-    top: 25px;
-    left: 16px;
-    transform: rotate(0);
-  }
-  .title h2 {
-    font-size: 45px;
-    line-height: 50px;
-  }
-  .title span {
-    font-size: 16px;
-  }
-  header {
-    display: none;
-  }
-  .mobile-gnb-wrap {
-    display: block;
-  }
-  .btn-line {
-    min-width: 120px;
-    padding: 12px 0;
-    font-size: 14px;
-  }
 }/*# sourceMappingURL=layout.css.map */
