--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -16,7 +16,8 @@ $pink: #f2afa3;
   }
 }
 
-.inner-wrap {
+// header, section, footer > .inner (공통)
+.inner {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
@@ -25,6 +26,25 @@ $pink: #f2afa3;
   box-sizing: border-box;
 }
 
+// h1.anchor
+.anchor {
+  position: fixed;
+  top: 40px;
+  left: 16px;
+  font-size: 16px;
+  font-weight: 300;
+  color: $black;
+  opacity: 0.7;
+  z-index: 2;
+  transform: rotate(90deg);
+  @media all and (max-width: 768px) {
+    top: 25px;
+    left: 16px;
+    transform: rotate(0);
+  }
+}
+
+// header
 header {
   position: fixed;
   top: 0;
@@ -32,6 +52,9 @@ header {
   width: 100%;
   z-index: 1;
   background: rgba(255, 255, 255, 0.3);
+  @media all and (max-width: 768px) {
+    display: none;
+  }
 
   nav {
     height: 80px;
@@ -84,6 +107,9 @@ header {
   top: 0;
   margin: 0;
   z-index: 1000;
+  @media all and (max-width: 768px) {
+    display: block;
+  }
 
   .btn-menu {
     position: fixed;
@@ -184,87 +210,7 @@ header {
   }
 }
 
-.box {
-  width: 100%;
-  border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-  transform: translate3d(0, 0, 0);
-
-  &:after {
-    content: "";
-    display: block;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(#e8a, 1), rgba(#def, 0) 80%, rgba(white, 0.5));
-    z-index: 11;
-    transform: translate3d(0, 0, 0);
-  }
-
-  .wave {
-    opacity: 0.4;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    background: $blue;
-    width: 460px;
-    height: 460px;
-    margin-left: -230px;
-    margin-top: -230px;
-    transform-origin: 50% 48%;
-    border-radius: 43%;
-    animation: drift 3000ms infinite linear;
-
-    &.two {
-      animation: drift 7000ms infinite linear;
-      opacity: 0.1;
-      background: #ff79ed;
-    }
-
-    &.three {
-      animation: drift 5000ms infinite linear;
-      background: #007bff;
-    }
-  }
-}
-
-h1 {
-  position: fixed;
-  top: 40px;
-  left: 16px;
-  font-size: 16px;
-  font-weight: 300;
-  color: $black;
-  opacity: 0.7;
-  z-index: 2;
-  transform: rotate(90deg);
-}
-
-.title {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  text-align: center;
-  color: #fff;
-
-  h2 {
-    font-size: 55px;
-    line-height: 60px;
-    font-family: "Playfair Display", serif;
-  }
-
-  span {
-    display: block;
-    font-size: 16px;
-    font-family: "Roboto", "Noto Sans KR", sans-serif;
-    font-weight: 300;
-  }
-}
-
+// btn-line 버튼 (공통)
 .btn-line {
   position: relative;
   display: inline-block;
@@ -277,6 +223,11 @@ h1 {
   transition: 500ms ease all;
   color: $black;
   font-weight: 500;
+  @media all and (max-width: 768px) {
+    min-width: 120px;
+    padding: 12px 0;
+    font-size: 14px;
+  }
 
   &:hover {
     background: transparent;
@@ -309,7 +260,7 @@ h1 {
   }
 }
 
-
+// footer
 footer {
   position: fixed;
   bottom: 0;
@@ -322,37 +273,5 @@ footer {
     font-size: 16px;
     color: #ddd;
     opacity: 0.7;
-  }
-}
-
-@media all and (max-width: 768px) {
-  h1 {
-    top: 25px;
-    left: 16px;
-    transform: rotate(0);
-  }
-
-  .title {
-    h2 {
-      font-size: 45px;
-      line-height: 50px;
-    }
-
-    span {
-      font-size: 16px;
-    }
-  }
-
-  header {
-    display: none;
-  }
-  .mobile-gnb-wrap {
-    display: block;
-  }
-
-  .btn-line {
-    min-width: 120px;
-    padding: 12px 0;
-    font-size: 14px;
   }
 }
