--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,418 +5,460 @@ $pink: #f2afa3;
 .section {
   min-height: 100vh;
 
-  &.section-gray {
-    background-color: #fafafa;
-  }
-}
-
-.about-wrap {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 100px;
-  padding-bottom: 100px;
-
-  .title-box {
+  // section.home
+  &.home {
+    width: 100%;
+    border-radius: 5px;
     position: relative;
-    width: 50%;
-    border-right: 1px solid #ddd;
-    padding-right: 5%;
-    box-sizing: border-box;
-
-    strong {
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+  
+    &:after {
+      content: "";
       display: block;
-      font-size: 32px;
-      font-weight: 400;
-      color: #323232;
-      line-height: 50px;
-
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(#e8a, 1), rgba(#def, 0) 80%, rgba(white, 0.5));
+      z-index: 11;
+      transform: translate3d(0, 0, 0);
+    }
+  
+    .wave {
+      opacity: 0.4;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      background: $blue;
+      width: 460px;
+      height: 460px;
+      margin-left: -230px;
+      margin-top: -230px;
+      transform-origin: 50% 48%;
+      border-radius: 43%;
+      animation: drift 3000ms infinite linear;
+  
+      &.two {
+        animation: drift 7000ms infinite linear;
+        opacity: 0.1;
+        background: #ff79ed;
+      }
+  
+      &.three {
+        animation: drift 5000ms infinite linear;
+        background: #007bff;
+      }
+    }
+  
+    .title {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+      color: #fff;
+    
+      h2 {
+        font-size: 55px;
+        line-height: 60px;
+        font-family: "Playfair Display", serif;
+        @media all and (max-width: 768px) {
+          font-size: 45px;
+          line-height: 50px;
+        }
+      }
+    
       span {
         display: block;
-        color: $blue;
-        font-size: 24px;
-        line-height: 32px;
-
-        &.point {
-          margin-bottom: 10px;
-          color: #192d9a;
-        }
-      }
-    }
-
-    .btn-resume {
-      position: absolute;
-      bottom: 15px;
-      left: 0;
-      margin-top: 20px;
-    }
-  }
-
-  .contents-box {
-    width: 50%;
-    padding-left: 5%;
-    box-sizing: border-box;
-
-    ul {
-      li{
-        position: relative;
-        padding-left: 30px;
-
-        &:nth-child(n + 2) {
-          margin-top: 30px;
-        }
-
-        &::before {
-          content: '';
-          position: absolute;
-          left: 0;
-          top: 6px;
-          width: 14px;
-          height: 14px;
-          background: url("../images/icon-checkmark.png") no-repeat center;
-          background-size: 100%;
-        }
-
-        strong {
-          font-size: 18px;
-          font-weight: 500;
-          color: $black;
-          line-height: 28px;
-        }
-
-        p {
-          margin-top: 5px;
+        font-size: 16px;
+        font-family: "Roboto", "Noto Sans KR", sans-serif;
+        font-weight: 300;
+        @media all and (max-width: 768px) {
           font-size: 16px;
-          color: #323232;
-          line-height: 24px;
         }
       }
     }
   }
-}
 
-.portfoilo-wrap {
-  padding: 60px 16px;
+  // section.aboutme
+  &.aboutme {
+    background-color: #fafafa;
 
-  .portfoilo-item {
-    display: block;
-    justify-content: space-between;
-    padding: 60px 0;
-
-    > div {
-      position: relative;
-      width: 50%;
-      box-sizing: border-box;
-    }
-
-    .left-box {
-      float: left;
-      padding-right: 5%;
-      border-right: 1px solid #ddd;
-    }
-
-    .right-box {
-      float: right;
-      padding-left: 5%;
-    }
-
-    .txt-box {
-      .tit-area {
-        .num {
+    .inner {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      @media all and (max-width: 768px) {
+        display: block;
+      }
+    
+      .title-box {
+        position: relative;
+        width: 50%;
+        border-right: 1px solid #ddd;
+        padding-right: 5%;
+        box-sizing: border-box;
+        @media all and (max-width: 768px) {
+          width: 100%;
+          border-right: none;
+          border-bottom: 1px solid #ddd;
+          padding: 0 0 50px;
+          text-align: center;
+        }
+    
+        strong {
           display: block;
           font-size: 32px;
-          color: $pink;
-          font-weight: 500;
-        }
-
-        .tit {
-          display: inline-block;
-          margin-top: 15px;
-          font-size: 32px;
-          line-height: 36px;
-          font-weight: 500;
-          letter-spacing: -0.8px;
-          word-break: keep-all;
-          color: $black;
-
-          .category {
+          font-weight: 400;
+          color: #323232;
+          line-height: 50px;
+          @media all and (max-width: 768px) {
+            font-size: 28px;
+            line-height: 45px;
+          }
+    
+          span {
             display: block;
-            font-size: 16px;
-            font-weight: 300;
-            letter-spacing: 1px;
+            color: $blue;
+            font-size: 24px;
+            line-height: 32px;
+    
+            &.point {
+              margin-bottom: 10px;
+              color: #192d9a;
+            }
+          }
+        }
+    
+        .btn-resume {
+          position: absolute;
+          bottom: 15px;
+          left: 0;
+          margin-top: 20px;
+          @media all and (max-width: 768px) {
+            position: relative;
+            margin-top: 40px;
           }
         }
       }
+    
+      .contents-box {
+        width: 50%;
+        padding-left: 5%;
+        box-sizing: border-box;
+        @media all and (max-width: 768px) {
+          width: 100%;
+          padding: 50px 0 0;
+        }
+    
+        ul {
+          li{
+            position: relative;
+            padding-left: 30px;
+    
+            &:nth-child(n + 2) {
+              margin-top: 30px;
+            }
+    
+            &::before {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: 6px;
+              width: 14px;
+              height: 14px;
+              background: url("../images/icon-checkmark.png") no-repeat center;
+              background-size: 100%;
+              @media all and (max-width: 768px) {
+                top: 4px;
+              }
+            }
+    
+            strong {
+              font-size: 18px;
+              font-weight: 500;
+              color: $black;
+              line-height: 28px;
+              @media all and (max-width: 768px) {
+                font-size: 16px;
+                line-height: 24px;
+              }
+            }
+    
+            p {
+              margin-top: 5px;
+              font-size: 16px;
+              color: #323232;
+              line-height: 24px;
+              @media all and (max-width: 768px) {
+                font-size: 14px;
+      
+                br {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 
-      dl {
+  // section.portfoilo
+  &.portfoilo {
+    .inner {
+      padding: 60px 16px;
+    
+      .portfoilo-item {
+        display: block;
+        justify-content: space-between;
+        padding: 60px 0;
+        @media all and (max-width: 768px) {
+          display: block;
+          position: relative;
+          padding: 50px 0;
+          
+          &:nth-child(2n)::before {
+            content: '';
+            position: absolute;
+            left: -500px;
+            top: 0;
+            width: 2000px;
+            height: 100%;
+            background-color: #fafafa;
+          }
+        }
+    
+        > div {
+          position: relative;
+          width: 50%;
+          box-sizing: border-box;
+          @media all and (max-width: 768px) {
+            position: relative;
+            width: 100%;
+    
+            & + div {
+              margin-top: 30px;
+            }
+          }
+        }
+    
+        .left-box {
+          float: left;
+          padding-right: 5%;
+          border-right: 1px solid #ddd;
+          @media all and (max-width: 768px) {
+            padding-right: 0;
+            border-right: none;
+          }
+        }
+    
+        .right-box {
+          float: right;
+          padding-left: 5%;
+          @media all and (max-width: 768px) {
+            padding-left: 0;
+          }
+        }
+    
+        .txt-box {
+          .tit-area {
+            .num {
+              display: block;
+              font-size: 32px;
+              color: $pink;
+              font-weight: 500;
+              @media all and (max-width: 768px) {
+                font-size: 24px;
+              }
+            }
+    
+            .tit {
+              display: inline-block;
+              margin-top: 15px;
+              font-size: 32px;
+              line-height: 36px;
+              font-weight: 500;
+              letter-spacing: -0.8px;
+              word-break: keep-all;
+              color: $black;
+              @media all and (max-width: 768px) {
+                margin-top: 10px;
+                font-size: 28px;
+                line-height: 34px;
+              }
+    
+              .category {
+                display: block;
+                font-size: 16px;
+                font-weight: 300;
+                letter-spacing: 1px;
+                @media all and (max-width: 768px) {
+                  font-size: 14px;
+                }
+              }
+            }
+          }
+    
+          dl {
+            position: relative;
+            padding-top: 30px;
+    
+            &::before {
+              content: "";
+              position: absolute;
+              top: 15px;
+              left: 0;
+              width: 15px;
+              height: 1px;
+              background: $pink;
+            }
+    
+            dt {
+              font-size: 18px;
+              font-weight: 500;
+              color: #323232;
+              line-height: 28px;
+              @media all and (max-width: 768px) {
+                font-size: 16px;
+                line-height: 24px;
+              }
+    
+              &:nth-child(n + 2) {
+                margin-top: 15px;
+              }
+            }
+    
+            dd {
+              margin-top: 5px;
+              font-size: 16px;
+              color: #323232;
+              line-height: 24px;
+              @media all and (max-width: 768px) {
+                font-size: 14px;
+              }
+            }
+          }
+    
+          .btn-process {
+            margin-top: 50px;
+            @media all and (max-width: 768px) {
+              margin-top: 30px;
+            }
+          }
+        }
+    
+        .img-box {
+          .img {
+            width: 100%;
+            padding-top: 100%;
+            background: #ddd;
+            -webkit-box-shadow: 9px 5px 15px 1px rgba(0, 0, 0, 0.2);
+            box-shadow: 9px 5px 15px 1px rgba(0, 0, 0, 0.2);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: top 0 left 50%;
+            &.wireline {
+              background-image: url("../images/wireline.png");
+            }
+            &.esim {
+              background-image: url("../images/esim.png");
+            }
+            &.daelim {
+              background-image: url("../images/daelim.png");
+            }
+            &.gtec {
+              background-image: url("../images/gtec.png");
+            }
+            &.inha {
+              background-image: url("../images/inha.png");
+            }
+            &.kca {
+              background-image: url("../images/kca.png");
+              background-position-y: 8%;
+            }
+            &.ikea {
+              background-image: url("../images/ikea.png");
+            }
+            &.zooCoffee {
+              background-image: url("../images/zoocoffee.png");
+            }
+            @media all and (max-width: 768px) {
+              -webkit-box-shadow: none;
+              box-shadow: none;
+              border: 1px solid #f5f5f5;
+            }
+    
+            img {
+              max-width: 100%;
+            }
+          }
+        }
+      }
+    
+      .veiw-more-area {
+        text-align: center;
+        margin: 100px auto 50px;
+        @media all and (max-width: 768px) {
+          margin: 70px auto 0;
+        }
+      }
+    }
+  }
+
+  // section.contact
+  &.contact {
+    .inner {
+      text-align: center;
+    
+      .tit {
+        display: block;
+        font-size: 28px;
+        color: $black;
+        @media all and (max-width: 768px) {
+          font-size: 18px;
+        }
+      }
+    
+      .mail {
+        display: block;
         position: relative;
-        padding-top: 30px;
-
+        padding: 40px 0 60px;
+        font-size: 60px;
+        color: $black;
+        @media all and (max-width: 768px) {
+          font-size: 26px;
+          padding: 20px 0 40px;
+        }
+    
         &::before {
           content: "";
           position: absolute;
-          top: 15px;
-          left: 0;
+          top: 20px;
+          left: 50%;
           width: 15px;
           height: 1px;
-          background: $pink;
-        }
-
-        dt {
-          font-size: 18px;
-          font-weight: 500;
-          color: #323232;
-          line-height: 28px;
-
-          &:nth-child(n + 2) {
-            margin-top: 15px;
+          background: $blue;
+          transform: translateX(-50%);
+          @media all and (max-width: 768px) {
+            top: 10px;
+            width: 10px;
           }
         }
-
-        dd {
-          margin-top: 5px;
-          font-size: 16px;
-          color: #323232;
-          line-height: 24px;
-        }
       }
-
-      .btn-process {
-        margin-top: 50px;
-      }
-    }
-
-    .img-box {
-      .img {
-        width: 100%;
-        padding-top: 100%;
-        background: #ddd;
-        -webkit-box-shadow: 9px 5px 15px 1px rgba(0, 0, 0, 0.2);
-        box-shadow: 9px 5px 15px 1px rgba(0, 0, 0, 0.2);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: top 0 left 50%;
-
-        &.wireline {
-          background-image: url("../images/wireline.png");
-        }
-        &.esim {
-          background-image: url("../images/esim.png");
-        }
-        &.daelim {
-          background-image: url("../images/daelim.png");
-        }
-        &.gtec {
-          background-image: url("../images/gtec.png");
-        }
-        &.inha {
-          background-image: url("../images/inha.png");
-        }
-        &.kca {
-          background-image: url("../images/kca.png");
-          background-position-y: 8%;
-        }
-        &.ikea {
-          background-image: url("../images/ikea.png");
-        }
-        &.zooCoffee {
-          background-image: url("../images/zoocoffee.png");
-        }
-        img {
-          max-width: 100%;
-        }
-      }
-    }
-  }
-
-  .veiw-more-area {
-    text-align: center;
-    margin: 100px auto 50px;
-  }
-}
-
-.contact-wrap {
-  text-align: center;
-
-  .tit {
-    display: block;
-    font-size: 28px;
-    color: $black;
-  }
-
-  .mail {
-    display: block;
-    position: relative;
-    padding: 40px 0 60px;
-    font-size: 60px;
-    color: $black;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      width: 15px;
-      height: 1px;
-      background: $blue;
-      transform: translateX(-50%);
-    }
-  }
-
-  .text {
-    display: block;
-    font-size: 24px;
-    font-weight: 300;
-    color: #323232;
-  }
-}
-
-@media all and (max-width: 768px) {
-  .about-wrap {
-    display: block;
-
-    .title-box {
-      width: 100%;
-      border-right: none;
-      border-bottom: 1px solid #ddd;
-      padding: 0 0 50px;
-      text-align: center;
-
-      strong {
-        font-size: 28px;
-        line-height: 45px;
-      }
-
-      .btn-resume {
-        position: relative;
-        margin-top: 40px;
-      }
-    }
-
-    .contents-box {
-      width: 100%;
-      padding: 50px 0 0;
-
-      ul {
-        li {
-          &::before {
-            top: 4px;
-          }
-
-          strong {
-            font-size: 16px;
-            line-height: 24px;
-          }
     
-          p {
-            font-size: 14px;
-  
-            br {
-              display: none;
-            }
-          }
+      .text {
+        display: block;
+        font-size: 24px;
+        font-weight: 300;
+        color: #323232;
+        @media all and (max-width: 768px) {
+          font-size: 20px;
         }
       }
-    }
-  }
-
-  .portfoilo-wrap {
-    .portfoilo-item {
-      display: block;
-      position: relative;
-      padding: 50px 0;
-
-      &:nth-child(2n)::before {
-        content: '';
-        position: absolute;
-        left: -500px;
-        top: 0;
-        width: 2000px;
-        height: 100%;
-        background-color: #fafafa;
-      }
-
-      > div {
-        position: relative;
-        width: 100%;
-
-        & + div {
-          margin-top: 30px;
-        }
-      }
-
-      .left-box {
-        padding-right: 0;
-        border-right: none;
-      }
-
-      .right-box {
-        padding-left: 0;
-      }
-
-      .txt-box {
-        .tit-area {
-          .num {
-            font-size: 24px;
-          }
-  
-          .tit {
-            margin-top: 10px;
-            font-size: 28px;
-            line-height: 34px;
-  
-            .category {
-              font-size: 14px;
-            }
-          }
-        }
-  
-        dl {
-          dt {
-            font-size: 16px;
-            line-height: 24px;
-          }
-  
-          dd {
-            font-size: 14px;
-          }
-        }
-  
-        .btn-process {
-          margin-top: 30px;
-        }
-      }
-
-      .img-box {
-        .img {
-          -webkit-box-shadow: none;
-          box-shadow: none;
-          border: 1px solid #f5f5f5;
-        }
-      }
-    }
-
-    .veiw-more-area {
-      margin: 70px auto 0;
-    }
-  }
-
-  .contact-wrap {
-    .tit {
-      font-size: 18px;
-    }
-
-    .mail {
-      font-size: 26px;
-      padding: 20px 0 40px;
-
-      &::before {
-        top: 10px;
-        width: 10px;
-      }
-    }
-
-    .text {
-      font-size: 20px;
     }
   }
 }
